# collection_keeper

./: .copier-answers.yml  .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  test_collection.yml
.devcontainer/: Dockerfile.dev
.github/workflows/: ci.yml
config/: ruff.toml
src/collection_keeper/: __init__.py  __main__.py  cli.py  config.py  logging.py  utils.py
src/collection_keeper/dedupe/: __init__.py  images.py
src/collection_keeper/download/: __init__.py  download.py  utils.py
tests/: __init__.py  test_cli.py  test_config.py  test_dedup.py  test_download.py
